output.log
nohup: ignoring input
◇ injected env (5) from .env // tip: ◈ encrypted .env [www.dotenvx.com]
/data/data/com.termux/files/home/arbimine/routes/auth.js:52
                error: 'User already exists, try 
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1806:18)
    at Module._compile (node:internal/modules/cjs/loader:1847:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:2013:10)
    at Module.load (node:internal/modules/cjs/loader:1596:32)
    at Module._load (node:internal/modules/cjs/loader:1398:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.require (node:internal/modules/cjs/loader:1619:12)
    at require (node:internal/modules/helpers:191:16)
    at Object.<anonymous> (/data/data/com.termux/files/home/arbimine/server.js:25:18)
    at Module._compile (node:internal/modules/cjs/loader:1873:14)

Node.js v26.2.0
